static/css/main.css
/*
============================================================= 
General Styling
============================================================= 
*/

* {
    box-sizing: border-box;
}

@font-face {
    src: url(../fonts/artdeco.ttf);
    font-family: artdeco;
}

.about-body {
    background: #04444c;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    min-height: calc(100vh - 16px);
    font-size: 16px;
    background: repeating-linear-gradient(45deg, #fffff0, #fffff0 25px, #b5a642 25px, #b5a642 27px, #191919 29px, #191919 29.5px);
    line-height: 1.4em;
}

.wrapper-portfolio {
    background: #04444c;
    display: flex;
    justify-content: center;
    flex-direction: column;
    box-shadow: 0 0 0 2px #b5a642, 0 0 0 4px #191919, 0 0 0 6px #b5a642;
    margin: 20px auto;
    width: 95%;
}

.wrapper-about {
    padding: 50px;
    background: #04444c;
    display: flex;
    justify-content: center;
    flex-direction: column;
    box-shadow: 0 0 0 2px #b5a642, 0 0 0 4px #191919, 0 0 0 6px #b5a642;
    margin: 20px auto;
    width: 95%;
}

body {
    max-width: 100% !important;
    overflow: hidden !important;
    margin: 0;
    background-color: #04444c;
    padding: 1em;
}


#cover-index {
    position: fixed;
    z-index: 9997;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #1d1b31;
}

#cover {
    position: fixed;
    z-index: 9997;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #131031;
}

.cover-display-none {
    display: none;
}


.main {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
}


/*
============================================================= 
BTN
============================================================= 
*/

.btn {
    font-family: artdeco;
    cursor: pointer;
    position: relative;
    padding: 15px 20px;
    font-size: 38px;
    border-top-right-radius: 10px;
    border-bottom-left-radius: 10px;
    letter-spacing: .075em;
    color: #fff;
    transition: .2s all;
}

.btn:after,
.btn:before {
    content: " ";
    width: 10px;
    height: 10px;
    position: absolute;
    border: 0px solid #fff;
    transition: all 1s;
}

.btn:after {
    top: -1px;
    left: -1px;
    border-top: 5px solid rgb(214, 214, 214);
    border-left: 5px solid rgb(158, 158, 158);
}

.btn:before {
    bottom: -1px;
    right: -1px;
    border-bottom: 5px solid rgb(182, 182, 182);
    border-right: 5px solid rgb(226, 226, 226);
}

.btn:hover {
    border-top-right-radius: 0px;
    border-bottom-left-radius: 0px;
    color: #f9e09f;
}

.btn:hover:before,
.btn:hover:after {
    width: 100%;
    height: 100%;
}

a h1 {
    text-decoration: none;
    display: block;
    font-size: 1.5em;
    transition: all 0.5s ease-in-out;
    padding: 8px
}


/*
============================================================= 
LANDING PAGE BOX
============================================================= 
*/

.box-index {
    flex-grow: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    background-size: cover;
    cursor: pointer;
    padding: 2em;
    box-sizing: border-box;
    text-align: center;
    -webkit-transition: background-color 1s ease-out;
    -moz-transition: background-color 1s ease-out;
    -o-transition: background-color 1s ease-out;
    transition: background-color 1s ease-out;

}


.box-index:hover {
    background-color: #06060c;
    cursor: pointer;

}



.box-index:after,
.box-index:before {
    content: " ";
    width: 10px;
    height: 10px;
    position: absolute;
    border: 0px solid #fff;
    transition: all 1s;
}

.box-index:after {
    top: -1px;
    left: -1px;
    border-top: 5px solid rgb(190, 204, 0);
    border-left: 5px solid rgb(202, 224, 1);
}

.box-index:before {
    bottom: -1px;
    right: -1px;
    border-bottom: 5px solid rgb(170, 182, 0);
    border-right: 5px solid rgb(192, 189, 0);
}

.box-index:hover {
    border-top-right-radius: 0px;
    border-bottom-left-radius: 0px;
    color: rgb(226, 222, 0)
}

.btn:hover:before,
.btn:hover:after {
    width: 100%;
    height: 100%;
}


/*
============================================================= 
LANDING PAGE Logo
============================================================= 
*/


.shadow {
    position: absolute;
    max-width: 50%;
    max-height: 50%;
    top: 50%;
    left: 50%;
    overflow: visible;
}

img.logo {
    max-width: 100%;
overflow: hidden;
    position: relative;
    max-width: 100%;
    max-height: 100%;
    margin-top: -50%;
    margin-left: -50%;
}


/*
============================================================= 
FRAME
============================================================= 
*/

.frame-bottom {
    position: fixed;
    bottom: 0px;
    display: block;
    width: calc(100% - 24px);
    margin: 12px;
    height: 3px;
    background-color: #e39d58;
    z-index: 2500;
}

.frame-top {
    position: fixed;
    display: block;
    width: calc(100% - 24px);
    margin: 12px;
    height: 3px;
    background-color: #e39d58;
    z-index: 2500;
}

.frame-left {
    position: fixed;
    display: block;
    height: calc(100% - 24px);
    margin: 12px;
    width: 3px;
    background-color: #e39d58;
    z-index: 2500;
}

.frame-right {
    position: fixed;
    display: block;
    right: 0px;
    height: calc(100% - 24px);
    margin: 12px;
    width: 3px;
    background-color: #e39d58;
    z-index: 2500;
}


/*
============================================================= 
PARTICLES
============================================================= 
*/

#particles-js {
    height: 100vh;
}


/*
============================================================= 
ABOUT PAGE
============================================================= 
*/

.frame {
    border: 2px solid #72634c;
    outline: 2px solid #72634c;
    outline-offset: -12px;
    height: 100%;
}
/* ... */

